--- a/report.tex
+++ b/report.tex
@@ -18,11 +18,11 @@
 \tableofcontents
 
 \chapter{Background Knowledge of the lab}
-
 \subfile{sub_background}
 \chapter{Steps of accomplishing this Lab}
 \subfile{sub_steps}
 \chapter{Conclusion}
+\subfile{sub_conclusion}
 
 \begin{thebibliography}{A}
 
