Updated the structure of the document

--- a/report.tex
+++ b/report.tex
@@ -22,14 +22,18 @@
 \tableofcontents
 
 \chapter{Background Knowledge of the lab}
-\subfile{sub_background}
+\subfile{huang}
 
 \chapter{Steps of accomplishing this Lab}
 
 \subfile{sub_steps}
 
-\chapter{Conclusion}
-\subfile{sub_conclusion}
+\chapter{Interface Documentation}
+\subfile{tang}
+
+\chapter{Structure of  the project}
+\subfile{liu}
+
 
 \begin{thebibliography}{A}
 
