finish huang.tex

--- a/huang.tex
+++ b/huang.tex
@@ -1,6 +1,37 @@
 \documentclass[./report.tex]{subfiles}
 \begin{document}
 
-AAA
+\section{the Object of the Project}
+\subsection{Several Basic Functions}
+Through this lab, we finish the several required basic functions of an on-line coffee sale system.
+\subsection{the Process of Software Development}
+Through this lab, we also have the chance to experience the real process of software development, and understand the importance of coding quality and software design.
+\subsection{Teamwork Based on Git and DevCloud}
+We also learn to develop as a team.
 
+\section{the main functions of the Project}
+ The main functions are as follows:
+ \subsection{Login and Signup}
+ Before entering the coffee system, the user should signup/login first. This part is finished by Jiani Huang. 
+ \subsection{Check Status of Login and Price}
+ The system should always record the status of user and the order. This part is finished by Chen Wang.
+ \subsection{Calculate the Coffee Price}
+ The system will calculate the total order price according to the standard input made by the user. This part is finished by Jiaxing Liu.
+  \subsection{Code Checking}
+  Finally, to ensure the correctness and quality of the whole system, we will perform several code checks on the DecCloud platform. This part is finished by Xinyue Tang.
+\section{Frame:Spring Boot}
+\subsection{The feature of Spring Boot in comparison to other Java EE frameworks}
+Spring Boot makes it easy to create stand-alone, production-grade Spring based Applications that we can ``just run''.
+\par
+The designers of Spring Boot take an opinionated view of the Spring platform and third-party libraries so we can get started with minimum fuss. Most Spring Boot applications need very little Spring configuration.
+\par
+Specifically, Spring Boot has the following features:
+\begin{enumerate}
+  \item Create stand-alone Spring applications;
+  \item Embed Tomcat, Jetty or Undertow directly (no need to deploy WAR files);
+  \item Provide opinionated ``starter'' dependencies to simplify your build configuration;
+  \item Automatically configure Spring and 3rd party libraries whenever possible;
+  \item Provide production-ready features such as metrics, health checks and externalized configuration;
+  \item Absolutely no code generation and no requirement for XML configuration.
+\end{enumerate}
 \end{document}
