Finished fixing Huang, Jiani's part

--- a/huang.tex
+++ b/huang.tex
@@ -1,16 +1,26 @@
 \documentclass[./report.tex]{subfiles}
 \begin{document}
 
-\section{the Object of the Project}
-\subsection{Several Basic Functions}
-Through this lab, we finish the several required basic functions of an on-line coffee sale system.
-\subsection{the Process of Software Development}
-Through this lab, we also have the chance to experience the real process of software development, and understand the importance of coding quality and software design.
+\section{the Objectives of the Project}
+\subsection{Basic Functions}
+In this lab, we are going to complete an online coffee retailing system called ``Starbubucks coffee online retailing system'', to experience the software development process and to feel the importance of code quality control and software design. In general, this lab is based on the Git and DevCloud cloud platform for the convenience of team collaboration.
+\subsection{The life cycle of software development}
+Through this lab, we also have the chance to experience the real process of software development, and understand the importance of coding quality and software design. We are going to experience the most of a life cycle in the software development. A systems development life cycle is composed of a number of clearly defined and distinct work phases which are used by systems engineers and systems developers to plan for, design, build, test, and deliver information systems. \footnote{Wikipedia contributors. (2019, March 10). Systems development life cycle. In \emph{Wikipedia, The Free Encyclopedia}. Retrieved 06:13, March 10, 2019, from \url{https://en.wikipedia.org/w/index.php?title=Systems_development_life_cycle&oldid=887015682}} 
+\par
+In this lab, we can see the full period of the life cycle in a project in software engineering. Specifically, the steps are displayed in the following ways:
+\begin{enumerate}
+  \item \textbf{Planning.} The platform to place the codes and accomplish the management work, the framework to accomplish the back end and the front end of the server, the server system environment, the displaying user interface and the way to hand in the works are already worked out by the teaching assistants.
+  \item \textbf{Analysis.} The teaching assistants should consider how long the time limit should be given to the students, how detailed the documentation should be written and whether the difficulty is suitable for the students.
+  \item \textbf{Design.} After analysis, the teaching assistants should make appropriate frameworks, make sure that they can be started successfully, the interfaces are clearly specified and finally, place the codes on the Huawei Cloud platform.
+  \item \textbf{Implementation.} The students should follow the instructions of the teaching assistants and implement the concrete methods. Here specifically, we need only to modify a String and a port number.
+  \item \textbf{Maintenance.} Here this version of the Lab requires no maintenance after submission.
+\end{enumerate}
 \subsection{Teamwork Based on Git and DevCloud}
-We also learn to develop as a team.
+First of all, the start-up codes that the teaching assistants have prepared are put on the Code Management section on the cloud platform. We ought to clone the codes from the repository to our local desktop to make modifications. After proper modification, we need to commit our changes and push them to the remote repository on the Huawei Cloud. 
+We will develop the project as a team and utilize the advantages of the Git service offered by Huawei cloud.
 
-\section{the main functions of the Project}
- The main functions are as follows:
+\section{The division of work in the team}
+Based on the actual work load of the whole project, the condition of each member in the team and according to the principle of equal responsibility, we have divided the entire workload into the following sections:
  \subsection{Login and Signup}
  Before entering the coffee system, the user should signup/login first. This part is finished by Jiani Huang. 
  \subsection{Check Status of Login and Price}
@@ -19,7 +29,7 @@ We also learn to develop as a team.
  The system will calculate the total order price according to the standard input made by the user. This part is finished by Jiaxing Liu.
   \subsection{Code Checking}
   Finally, to ensure the correctness and quality of the whole system, we will perform several code checks on the DecCloud platform. This part is finished by Xinyue Tang.
-\section{Frame:Spring Boot}
+\section{Framework: Spring Boot}
 \subsection{The feature of Spring Boot in comparison to other Java EE frameworks}
 Spring Boot makes it easy to create stand-alone, production-grade Spring based Applications that we can ``just run''.
 \par
