--- a/report.tex
+++ b/report.tex
@@ -10,10 +10,10 @@
 \title{Lab Report for Software Engineering course \newline
  Lab 2: Starbubucks coffee online retailing system v1.0}
 
-\author{Wang, Chen \\ 16307110064 \\ School of Software\\ Fudan University}
-\author{Liu, Jiaxing\\17302010049 \\ School of Software\\ Fudan University}
-\author{Huang, Jiani\\17302010063\\School of Software\\ Fudan University}
-\author{Tang, Xinyue\\16307110476\\School of Software\\ Fudan University}
+\author{Wang, Chen \\ 16307110064 \\ School of Software\\ Fudan University,
+Liu, Jiaxing\\17302010049 \\ School of Software\\ Fudan University
+Huang, Jiani\\17302010063\\School of Software\\ Fudan University
+Tang, Xinyue\\16307110476\\School of Software\\ Fudan University}
 \date{\today}
 \bibliographystyle{plain}
 \begin{document}
@@ -21,7 +21,7 @@
 
 \tableofcontents
 
-\chapter{Background Knowledge of the lab}
+\chapter{Overview of the lab}
 \subfile{huang}
 
 
@@ -30,10 +30,10 @@
 \subfile{sub_steps}
 
 \chapter{Interface Documentation}
-\subfile{tang}
+
 
 \chapter{Structure of  the project}
-\subfile{liu}
+
 
 
 \begin{thebibliography}{A}
