changed the format of author

--- a/report.tex
+++ b/report.tex
@@ -10,10 +10,11 @@
 \title{Lab Report for Software Engineering course \newline
  Lab 2: Starbubucks coffee online retailing system v1.0}
 
-\author{Wang, Chen \\ 16307110064 \\ School of Software\\ Fudan University,
-Liu, Jiaxing\\17302010049 \\ School of Software\\ Fudan University
-Huang, Jiani\\17302010063\\School of Software\\ Fudan University
-Tang, Xinyue\\16307110476\\School of Software\\ Fudan University}
+\author{Wang, Chen\qquad Liu, Jiaxing\qquad Huang, Jiani\qquad Tang, Xinyue \\
+16307110064\qquad17302010049\qquad 17302010063\qquad 16307110476 \\
+School of Software\\
+Fudan University
+ }
 \date{\today}
 \bibliographystyle{plain}
 \begin{document}
