add huang and login part

--- a/huang.tex
+++ b/huang.tex
@@ -1,4 +1,17 @@
 \documentclass[./report.tex]{subfiles}
 \begin{document}
+\section{Junit}
+\par JUnit is a unit testing framework for the Java programming language. JUnit has been important in the development of test-driven development, and is one of a family of unit testing frameworks which is collectively known as xUnit that originated with SUnit.
+\par JUnit is linked as a JAR at compile-time; the framework resides under package junit.framework for JUnit 3.8 and earlier, and under package org.junit for JUnit 4 and later.
+\section{JMock}
+\par JMock is a library that supports test-driven development of Java code with mock objects.
+\par Mock objects help you design and test the interactions between the objects in your programs.
 
+\par The jMock library:
+\begin{enumerate} 
+\item makes it quick and easy to define mock objects, so you don't break the rhythm of programming.
+\item lets you precisely specify the interactions between your objects, reducing the brittleness of your tests.
+\item works well with the autocompletion and refactoring features of your IDE
+\item plugs into your favourite test framework is easy to extend.
+\end{enumerate}
 \end{document}
