add some contents.

--- a/report.tex
+++ b/report.tex
@@ -125,7 +125,9 @@ boolean checkPassword(String password);
 %Tang, Xinyue above
 \section{Username checking method}
 %Liu, Jiaxing below
-
+\par The test for username checking method consists of two parts:the one for legal password and the other for illegal password.
+\subsection{Legal password}
+\par I construct a string-- 
 
 
 
