--- a/report.tex
+++ b/report.tex
@@ -125,18 +125,19 @@ boolean checkPassword(String password);
 %Tang, Xinyue above
 \section{Username checking method}
 %Liu, Jiaxing below
-\par The test for username checking method consists of two parts:the one for legal password and the other for illegal password.
-\subsection{Legal password}
-\par I construct a string-- 
-
-
-
+\par The test for username checking method consists of two parts: the one for legal name and the other for illegal one.
+\subsection{Legal name}
+\par I construct a string--starbb\_12AC--and it begins with the string starbb\_, and contains letters and digits. Therefore, it's legal.
+\subsection{Illegal name}
+\par It's very easy to construct an illegal name. A Null string, a string with other special characters, a string not beginning with the specified string and a much shorter or longer one all are wrong names. So I design 5 methods to cover all situations. In the beginning, I forgot to consider the situation that the name may be null. Thanks to WangChen's advice, I take it into account.
 %Liu, Jiaxing above
 \section{Password checking method}
 %Liu, Jiaxing below
-
-
-
+\par The test for password checking method consists of two parts: the one for legal password and the other for illegal one.
+\subsection{Legal password}
+\par I construct a string--123\_abc12--and it contains letters, digits and underline. Therefore, it's legal.
+\subsection{Illegal password}
+\par A legal password must contain all the three types: \textbf{letters}, \textbf{numbers} and \textbf{\_}. So in order to get a illegal password, there are many ways. Null password, a string without digits, a string without letters, a string without underline, a string with other special characters and a much shorter or longer one all are OK. So I design 7 methods to test. 
 
 %Liu, Jiaxing above
 \section{Status checking method}
