--- a/report.tex
+++ b/report.tex
@@ -127,12 +127,12 @@ boolean checkPassword(String password);
 %Tang, Xinyue above
 \section{Username checking method}
 %Liu, Jiaxing below
-\par The test for username checking method consists of two parts: the one for legal name and the other for illegal one.
+\par The test for username checking method consists of two parts: the one for legal one and the other for illegal one.
 \subsection{Legal name}
-\par I construct a string--starbb\_12AC--and it begins with the string starbb\_, and contains letters and digits. Therefore, it's legal.
+\par I construct a string--starbb\_12AC--and it begins with the string starbb\_, and contains letters and digits at the right length. Therefore, it's legal.
 \subsection{Illegal name}
-\par It's very easy to construct an illegal name. A Null string, a string with other special characters, a string not beginning with the specified string and a much shorter or longer one all are wrong names. So I design 5 methods to cover all situations. In the beginning, I forgot to consider the situation that the name may be null. Thanks to WangChen's advice, I take it into account.
-\par Username checking methods are more complex than others, and they contain many situations. But in fact, they are very normal and easy to implement. According to the classification method mentioned in class, I should design 5 methods to check whether the length of tested name is legal. But to make it easy, I just implement 3 methods for three types of name: the shorter one, the right one and the longer one, which don't include the two methods for just right ones.
+\par It's very easy to construct an illegal name. A null string, a string with other special characters, a string not beginning with the specified string and a much shorter or longer one all are wrong names. So I design 5 methods to cover all situations. In the beginning, I forgot to consider the situation that the name may be null. Thanks to WangChen's advice, I take it into account.
+\par Username checking methods are more complex than other test methods, and they contain many situations. But in fact, they are very normal and easy to implement. According to the classification method mentioned in class, I should design 5 methods to check whether the length of tested name is legal. But to be easy, I just implement 3 methods for three types of name: the shorter one, the right one and the longer one, which don't include the two methods for just right ones.
 \begin{lstlisting}[language=java]
     @Test
     public void testNameShorterThan8() {
@@ -154,12 +154,12 @@ boolean checkPassword(String password);
 %Liu, Jiaxing above
 \section{Password checking method}
 %Liu, Jiaxing below
-\par The test for password checking method consists of two parts: the one for legal password and the other for illegal one.
+\par The test for password checking method consists of two parts: the one for legal one and the other for illegal one.
 \subsection{Legal password}
-\par I construct a string--123\_abc12--and it contains letters, digits and underline. Therefore, it's legal.
+\par I construct a string--123\_abc12--and it contains letters, digits and underline at the right length. Therefore, it's legal.
 \subsection{Illegal password}
 \par A legal password must contain all the three types: \textbf{letters}, \textbf{numbers} and \textbf{\_}. So in order to get a illegal password, there are many ways. Null password, a string without digits, a string without letters, a string without underline, a string with other special characters and a much shorter or longer one all are OK. So I design 7 methods to test. 
-
+\par There maybe a small trap in checking password. Well, if we couldn't find the differences between legal name and legal password,  we'll write some wrong codes. It's because a legal password must contain all the three types but a legal name is unnecessary to satify the need.
 %Liu, Jiaxing above
 \section{Status checking method}
 %Tang, Xinyue below
